fixed bug where template would appear behind current canvas

--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -1,6 +1,5 @@
 #myCanvas{
     position: absolute;
-    z-index: 100;
 }   
 #ghostCanvas{
     position: absolute;
